tests/snapshots/run_wpt_conformance__trtx_isNaN_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "is_nan.https.any.js",
    "isNaN float32 1D tensor",
    "trtx",
    Failed {
        msg: Some(
            "is_nan :: isNaN float32 1D tensor: index 1: actual=0 expected=1 tolerance=0\n  inputs: isNaNInput: [1.5, String(\"NaN\")]\n  expected isNaNOutput: [0, 1]\n  actual isNaNOutput: [0, 0]\n  expected isNaNOutput full nd:\n(shape [2])\n[0, 1]\n  actual isNaNOutput full nd:\n(shape [2])\n[0, 0]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    isNaNInput: f32[2];\n  }\n\n  nodes {\n    [isNaNOutput] = isNaN(isNaNInput, label=\"\");\n  }\n\n  outputs { isNaNOutput; }\n}\n",
        ),
    },
)
